# node-DeepResearch-ai

./: .env.example  .gitignore  Dockerfile  RENDER_DEPLOYMENT.md  config.json  package-lock.json  package.json  pnpm-lock.yaml
.cursor/plans/: personas_busca_avaliacao_944fc65e.plan.md  plano-testes-distribuidos-deepresearch_60edae4d.plan.md
benchmark/: run-comparison.sh  step-timing.ts  ts-benchmark.ts
docs/: linkedin-post-final.md  linkedin-post-technical-breakdown.md
jina-ai/: config.json
rust-implementation/: .dockerignore  COMPARISON_REPORT.md  CONVERSATION.md  Cargo.toml  Dockerfile  PR_DESCRIPTION.md  README.md  leo.md  plan.md  railway.toml  rust-implementation-deep-dive.md
rust-implementation/benches/: agent_bench.rs  e2e_bench.rs  evaluation_bench.rs  personas_bench.rs  search_bench.rs  simd_bench.rs
rust-implementation/config/: ascii-art.txt  personas.json
rust-implementation/examples/: comparison_benchmark.rs  jina_test.rs  jina_vs_rust_comparison.rs  search_detailed_logs.rs  search_ultra_detailed.rs  visual_benchmark.rs
rust-implementation/sessions/: 20251208_164836_1fe4e43e.json
rust-implementation/src/: config.rs  lib.rs  llm.rs  main.rs  reader_comparison.rs  search.rs  search_cache.rs  search_metrics.rs  search_trace.rs  types.rs
rust-implementation/src/agent/: actions.rs  agent_analyzer.rs  chatbot.rs  context.rs  history.rs  interaction.rs  mod.rs  permissions.rs  sandbox.rs  state.rs
rust-implementation/src/evaluation/: determiner.rs  mod.rs  pipeline.rs  prompts.rs  trace.rs
rust-implementation/src/evidence/: evaluation_evidence.rs  mod.rs  search_evidence.rs
rust-implementation/src/integrations/: digisac_tools.rs  mod.rs  paytour_tools.rs
rust-implementation/src/performance/: mod.rs  simd.rs
rust-implementation/src/personas/: all_personas.rs  metrics.rs  mod.rs  orchestrator.rs  registry.rs  traits.rs  validator.rs
rust-implementation/src/server/: auth.rs  handlers.rs  mod.rs  sse.rs  types.rs
rust-implementation/src/tools/: finalizer.rs  mod.rs  reducer.rs  research_planner.rs
rust-implementation/src/tui/: agent_adapter.rs  app.rs  mod.rs  runner.rs  ui.rs
rust-implementation/src/utils/: build_ref.rs  file_reader.rs  mod.rs  segment.rs  text.rs  timing.rs  token_tracker.rs
rust-implementation/tests/: integration_tests.rs
src/: agent.ts  app.ts  cli.ts  config.ts  logging.ts
src/evals/: batch-evals.ts
src/tools/: brave-search.ts  broken-ch-fixer.ts  code-sandbox.ts  embeddings.ts  error-analyzer.ts  evaluator.ts  jina-latechunk.ts  jina-rerank.ts  query-rewriter.ts  read.ts  segment.ts
src/utils/: axios-client.ts  image-tools.ts  safe-generator.ts  text-tools.ts  token-tracker.ts  url-tools.ts
